<resources>
    <string name="app_name">O3Wallet</string>
    <string-array name="ONBOARDING_image_titles" comment="These are the titles for each image in the onboarding">
        <item>Add Watch Only Address</item>
        <item>Send, Claim, and Recieve</item>
        <item>Add Watch Only Address</item>
    </string-array>
    <string name="ONBOARDING_login_action" comment="This is the title for the login action in the onboarding flow">Login</string>
    <string name="ONBOARDING_new_wallet_question" comment="Informative text asking if the user is using O3 for the first time">New to O3?</string>
    <string name="ONBOARDING_create_new_wallet" comment="Text for the create new wallet action">Create a new wallet</string>
    <string name="ONBOARDING_existing_key_detected" comment="Warning the user that there is already a private key on this device">
        We\'ve detected that there is already a private key on
        this device, are you sure you want to replace the current private key with a new one?
    </string>
    <string name="ONBOARDING_Welcome" comment="Title for the welcome screen on the onboarding">Welcome!</string>
    <string name="ONBOARDING_your_public_address" comment="Title label for the generated address in the onboarding flow">Your Public Address</string>
    <string name="ONBOARDING_your_private_key" comment="Title label for your private key">Your Private Key (WIF)</string>
    <string name="ONBOARDING_private_key_warning" comment="Warning for users to keep their private key secure">Never lose or share your private key with anyone, doing so will compromise
        the security of your funds.</string>
    <string name="ONBOARDING_start_action">Start</string>
    <string name="ONBOARDING_please_backup_warning">Your private key is the most important piece of information in the NEO Economy.\n\n
    We will save an encrypted version on your device, but please make sure to write down the private key in another secure
        location so that you may retrieve your funds in case something happens to your device.</string>
    <string name="ONBOARDING_backup_warning_confirmation">I confirm that I have backed up my private key in another secure location</string>
    <string name="ONBOARDING_scan" comment="Title for scan button, allowing users to login by scanning private key">Scan</string>
    <string name="ONBOARDING_login_footnote" comment="Footnote showing that the private key will be stored locally on the device">This private key will be stored on your device after logging in.</string>
    <string name="ONBOARDING_scan_prompt" comment="Prompt asking the user to scan their QR code in order to log ib">Scan the QR code of your private key</string>
    <string name="ONBOARDING_Login_To_Existing" comment="Prompt when displaying passcode to login to existing wallet">Log in to your existing wallet</string>
    <string name="SETTINGS_settings_title" comment="A title for the settings menu">Settings</string>
    <string-array name="SETTINGS_settings_menu_titles" comment="A title for the individual item in the settings menu">
        <item>My Private Key</item>
        <item>Currency</item>
        <item>Watch Only Address</item>
        <item>Network</item>
        <item>Support</item>
        <item>Contact</item>
        <item>Logout</item>
        <item>Version</item>
        <item>Advanced</item>
    </string-array>
    <string name="SETTINGS_version" comment="A title for the version label in the settings menu">Version: %1$s</string>
    <string name="SETTINGS_write_down_warning" comment="A comment saying that writing down your private key is most secur ">
        The most secure way to back up your key is to write it down on paper and store it somewhere safe from theft or damage
    </string>
    <string name="SETTINGS_copy_to_clipboard" comment="Copy private key to clipboard">Copy to Clipboard</string>
    <string name="SETTINGS_save_as_qr" comment="save your qr image via sharing">Save as QR Key</string>
    <string name="SETTINGS_copied_key" comment="displayed when copied to clipboard">Copied Key</string>
    <string name="SETTINGS_currency" comment="A comment for the currency screen in the settings menu">Currency</string>
    <string name="SETTINGS_watch_addresses" comment="A title for watch addresses">Watch Addresses</string>
    <string name="SETTINGS_add_address_watch_addresses" comment="Button title to add a new watch address">+ ADD ADDRESS</string>
    <string name="SETTINGS_watch_address_explanation" comment="An explanation on what adding a new watch address means">Watch only addresses let you monitor your portfolio in an
    isolated environment. Although you won\'t be able to send funds frm these addresses, you will be able to check
    the balance</string>
    <string name="SETTINGS_watch_address" comment="A title for an individual watch address">Watch Address</string>
    <string name="SETTINGS_address_watch_addresses" comment="Address title for input field of watch address">Address</string>
    <string name="SETTINGS_paste_watch_addresses" comment="A title for paste button when adding a watch address">Paste</string>
    <string name="SETTINGS_scan_watch_addresses" comment="A title for scan button when adding a watcha ddress">SCAN</string>
    <string name="SETTINGS_name_watch_addresses" comment="A title for nickname input field when adding a watch address">Name</string>
    <string name="SETTINGS_add_watch_address" comment="Add title for when adding watch address">Add Watch Address</string>
    <string name="SETTINGS_scan_prompt_watch_address" comment="A prompt instructing the user user to scan the QR code of the address that they want to watch">Scan the QR code of the address you want to save</string>
    <string name="SETTINGS_remove_watch_address" comment="A button title for removing a watch address from your list">Remove Watch Address</string>
    <string name="SETTINGS_remove_watch_address_warning" comment="A warning prompt asking if the user for sure wants to remove the address">Are you sure you want to remove this watch address?</string>
    <string name="SETTINGS_add_address_watch_address_description" comment="Description explaining what will happen when you add a watch address">Watch only let you monitor your portfolio in
        an isolated environment. Although you won\'t be able to send funds from these addresses you will be able
        to check the balance</string>
    <string name="SETTINGS_available_nodes" comment="A title indicateding the currently available nodes in the NEO network">Available Nodes</string>
    <string name="SETTINGS_peer_count" comment="The number of peers currently connected to the existing node">Peer Count: %1$d</string>
    <string name="SETTINGS_block_count" comment="The bllock height of the node">Block Count: %1$d</string>
    <string name="SETTINGS_logout_warning" comment="A warning showing that logging out will delete the private key from the device">Are you sure you want to remove your private key from this device?</string>
    <string name="WALLET_address_book" comment="A title for the address book">Address Book</string>
    <string name="WALLET_add_address_address_book" comment="A title for the button to add a new address to the address book">+ ADD ADDRESS</string>
    <string name="WALLET_address" comment="A title for address input field when adding contact to address book">Address</string>
    <string name="WALLET_paste" comment="pasted action when entering address in wallet page">Paste</string>
    <string name="WALLET_scan" comment="scan action when scanning address in wallet page">Scan</string>
    <string name="WALLET_name_address_book" comment="A nickname for your contact in the address book">Name</string>
    <string name="WALLET_add_contact" comment="Add new contact action for new contact to address book">Add Contact</string>
    <string name="WALLET_address_book_scan_prompt" comment="A prompt for adding a new address to the address book">Scan the QR code of the address you want to save</string>
    <string name="WALLET_copied_address" comment="displayed when successfully copied an address to the clipboard">Copied Address</string>
    <string name="WALLET_remove_contact" comment="Action to remove a contact from the address book">Remove Contact</string>
    <string name="WALLET_remove_contact_warning" comment="Warning displayed when user attempts to remove contract from the address book">Are you sure you want to remove this contact?</string>
    <string name="WALLET_add_address_contact_description" comment="Description explaining what happens when you add a contact">Your address book will let you send funds
        all over the world without needing to remember your address</string>
    <string name="WALLET_my_o3_wallet" comment="A title for the wallet page where all utxos are listed">My O3 Wallet</string>
    <string name="WALLET_assets" comment="A title for the utxos tab on the wallet page">Assets</string>
    <string name="WALLET_transactions" comment="A title for the transactions tab in the wallet page">Transactions</string>
    <string name="WALLET_unclaimed_gas" comment="A title for the unclaimed gas portio">UNCLAIMED GAS</string>
    <string name="WALLET_add_nep_5_token" comment="Button title to add a nep5 token on the account screen">+ ADD NEP5 TOKEN</string>
    <string name="WALLET_claim" comment="A title for a claim in the transaction history">CLAIM</string>
    <string name="WALLET_nep_5_tokens" comment="Header for NEP 5 tokens in wallet">NEP5 Tokens</string>
    <string name="WALLET_my_address" comment="Header for my address page">My Address</string>
    <string name="WALLET_copy_address_my_address" comment="Copy Address action when looking at my address qr">COPY ADDRESS</string>
    <string name="WALLET_no_transactions" comment="Title for when transaction history is empty">No Transactions</string>
    <string name="TOPUP_encryption_in_progress" comment="Loading dialog while encryption is taking place">Encryption in Progress...</string>
    <string name="TOPUP_first_fragment_secure" comment="Dialog after the data has been fenerated">Two pieces of encrypted data is generated.
        One is securely stored on your device and You will be given another one in the next screen.</string>
    <string name="TOPUP_continue_button" comment="Continue button title">Continue</string>
    <string name="TOPUP_Introducing" comment="Title introducting new topup feature">Introducing</string>
    <string name="TOPUP_O3_Simple_Transfer" comment="O3 Simple Transfer Explanation">O3 Simple Transfer</string>
    <string name="TOPUP_Simple_Transfer_Explanation" comment="Explanation of toup feature">Secure and Convenient way to transfer NEO or GAS from any one of your NEO addresses to O3 Mobile Wallet.</string>
    <string name="PORTFOLIO_six_hours" comment="six hour porfolio interval">6H</string>
    <string name="PORTFOLIO_one_day" comment="one day portfolio interval">24H</string>
    <string name="PORTFOLIO_one_week" comment="oneweek potfolio interval">1W</string>
    <string name="PORTFOLIO_one_month" comment="one month portfolio interval">1M</string>
    <string name="PORTFOLIO_three_month" comment="three month portfolio interval">3M</string>
    <string name="PORTFOLIO_all" comment="alltime portfolio interval">ALL</string>
    <string name="DIALOG_tokens_in_your_wallet">You\'ve got tokens in your wallet</string>
    <string name="DIALOG_making_sure_backup">We just want to make sure you have backed up your private key to keep them safe</string>
    <string name="DIALOG_confirm_backup">My private key is backed up in a safe place</string>
    <string name="DIALOG_confirm_will_not_share">I will never share this key with anyone else</string>
    <string name="DIALOG_can_lose_confirm">I understand that if I lose this key I will lose access to my wallet</string>
    <string name="DIALOG_show_my_key">Show my key</string>
    <string name="DIALOG_performed_backup">All Done!</string>
</resources>