<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout5"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="network.o3.o3wallet.Topup.TutorialPageFragment">

    <!-- TODO: Update blank fragment layout -->
    <TextView
        android:id="@+id/tutorialSubtitleTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:text="@string/TOPUP_Introducing"
        android:textAppearance="@style/TutorialSubtitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tutorialTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/TOPUP_O3_Simple_Transfer"
        android:textAppearance="@style/TutorialTitle"
        app:layout_constraintStart_toStartOf="@+id/tutorialSubtitleTextView"
        app:layout_constraintTop_toBottomOf="@+id/tutorialSubtitleTextView" />

    <TextView
        android:id="@+id/tutorialExplanation"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:layout_marginTop="16dp"
        android:text="@string/TOPUP_Simple_Transfer_Explanation"
        android:textAppearance="@style/TutorialInfoText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/tutorialTitle"
        app:layout_constraintTop_toBottomOf="@+id/tutorialTitle" />

    <ImageView
        android:id="@+id/tutorialImage"
        android:layout_width="225dp"
        android:layout_height="225dp"
        android:layout_marginTop="8dp"
        android:src="@drawable/second_withdraw"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tutorialExplanation" />

</android.support.constraint.ConstraintLayout>
