<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="network.o3.o3wallet.Topup.TopupKeyGeneration">

    <ProgressBar
        android:id="@+id/encryptingProgress"
        style="?android:attr/progressBarStyle"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginTop="60dp"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/encryptionProgressTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="27dp"
        android:text="@string/TOPUP_encryption_in_progress"
        android:textAppearance="@style/PrimaryTitle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/encryptingProgress" />

    <ImageView
        android:id="@+id/lockImage"
        android:layout_width="129dp"
        android:layout_height="152dp"
        android:layout_marginTop="50dp"
        android:src="@drawable/ic_lock_green"
        android:visibility="invisible"
        app:layout_constraintEnd_toStartOf="@+id/encryptingProgress"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toEndOf="@+id/encryptingProgress"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/encryptionInfoTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:text="@string/TOPUP_first_fragment_secure"
        android:textAppearance="@style/TutorialInfoText"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/encryptionProgressTextView" />

    <Button
        android:id="@+id/continueEncryptionButton"
        style="@style/AccentButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:text="@string/TOPUP_continue_button"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/encryptionInfoTextView" />
</android.support.constraint.ConstraintLayout>
